--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <script>
             $('#lineLoginBtn').on('click', function(e) {
                 let client_id = '1654873251';
-                let redirect_uri = 'https://piedasing.github.io/line-service-demo/';
+                let redirect_uri = 'https://tp953704.github.io/line-login-test/';
                 let link = 'https://access.line.me/oauth2/v2.1/authorize?';
                 link += 'response_type=code';
                 link += '&client_id=' + client_id;
